--- a/Security/src/main/resources/application.properties
+++ b/Security/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=8082
 
+spring.datasource.url=jdbc:mysql://localhost:3306/jwt-security
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.poolName=HikariPool-Card
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql: true
